@@ -1,5 +1,12 @@
 2007-10-12  Michael Hutchinson <mhutchinson@novell.com> 
 
+	* Project/AspNetAppProjectConfiguration.cs: Allowing changing the output
+	  directory to a directory other than "bin", but only after warning the
+	  user that this may prevent the projct from running/deploying correctly.
+	  Enables some unusual use cases, and doesn't affect other people.
+
+2007-10-12  Michael Hutchinson <mhutchinson@novell.com> 
+
 	* Project/VerifyCodeBehindBuildStep.cs: Change how partial classes are
 	  handled during code generation to work around the fact that they don't
 	  have all of the information that the 'full' class does.
